src/grammar/RapierScriptParser.java
// Generated from RapierScript.g4 by ANTLR 4.6
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RapierScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SL_CMT=1, WS=2, COLON=3, COMMA=4, CURLY_L=5, CURLY_R=6, DOT=7, EQUALS=8, 
		MINUS=9, PAREN_L=10, PAREN_R=11, SEMI=12, SQUARE_L=13, SQUARE_R=14, ARROW=15, 
		PLUS=16, QUESTION=17, TIMES=18, CONST=19, DELETE=20, FN=21, FOR=22, GET=23, 
		HEAD=24, LET=25, NEW=26, PATCH=27, POST=28, PUT=29, RET=30, ID=31, INT=32, 
		DOUBLE=33, RAW_STRING=34, STRING=35, REGEX_LITERAL=36;
	public static final int
		RULE_requestMethod = 0, RULE_compilationUnit = 1, RULE_topLevel = 2, RULE_block = 3, 
		RULE_functionDecl = 4, RULE_functionBody = 5, RULE_argSpec = 6, RULE_paramSpec = 7, 
		RULE_type = 8, RULE_stmt = 9, RULE_assignStmt = 10, RULE_exprStmt = 11, 
		RULE_forStmt = 12, RULE_foreachStmt = 13, RULE_retStmt = 14, RULE_vardeclStmt = 15, 
		RULE_dictionaryLiteral = 16, RULE_dictionaryPair = 17, RULE_expr = 18;
	public static final String[] ruleNames = {
		"requestMethod", "compilationUnit", "topLevel", "block", "functionDecl", 
		"functionBody", "argSpec", "paramSpec", "type", "stmt", "assignStmt", 
		"exprStmt", "forStmt", "foreachStmt", "retStmt", "vardeclStmt", "dictionaryLiteral", 
		"dictionaryPair", "expr"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "':'", "','", "'{'", "'}'", "'.'", "'='", "'-'", "'('", 
		"')'", "';'", "'['", "']'", "'=>'", "'+'", "'?'", "'*'", "'const'", "'delete'", 
		"'fn'", "'for'", "'get'", "'head'", "'let'", "'new'", "'patch'", "'post'", 
		"'put'", "'ret'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SL_CMT", "WS", "COLON", "COMMA", "CURLY_L", "CURLY_R", "DOT", "EQUALS", 
		"MINUS", "PAREN_L", "PAREN_R", "SEMI", "SQUARE_L", "SQUARE_R", "ARROW", 
		"PLUS", "QUESTION", "TIMES", "CONST", "DELETE", "FN", "FOR", "GET", "HEAD", 
		"LET", "NEW", "PATCH", "POST", "PUT", "RET", "ID", "INT", "DOUBLE", "RAW_STRING", 
		"STRING", "REGEX_LITERAL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RapierScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RapierScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RequestMethodContext extends ParserRuleContext {
		public TerminalNode HEAD() { return getToken(RapierScriptParser.HEAD, 0); }
		public TerminalNode GET() { return getToken(RapierScriptParser.GET, 0); }
		public TerminalNode POST() { return getToken(RapierScriptParser.POST, 0); }
		public TerminalNode PUT() { return getToken(RapierScriptParser.PUT, 0); }
		public TerminalNode PATCH() { return getToken(RapierScriptParser.PATCH, 0); }
		public TerminalNode DELETE() { return getToken(RapierScriptParser.DELETE, 0); }
		public RequestMethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requestMethod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RapierScriptListener ) ((RapierScriptListener)listener).enterRequestMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RapierScriptListener ) ((RapierScriptListener)listener).exitRequestMethod(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RapierScriptVisitor ) return ((RapierScriptVisitor<? extends T>)visitor).visitRequestMethod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RequestMethodContext requestMethod() throws RecognitionException {
		RequestMethodContext _localctx = new RequestMethodContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_requestMethod);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DELETE) | (1L << GET) | (1L << HEAD) | (1L << PATCH) | (1L << POST) | (1L << PUT))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompilationUnitContext extends ParserRuleContext {
		public List<TopLevelContext> topLevel() {
			return getRuleContexts(TopLevelContext.class);
		}
		public TopLevelContext topLevel(int i) {
			return getRuleContext(TopLevelContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RapierScriptListener ) ((RapierScriptListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RapierScriptListener ) ((RapierScriptListener)listener).exitCompilationUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RapierScriptVisitor ) return ((RapierScriptVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CURLY_L) | (1L << PAREN_L) | (1L << SQUARE_L) | (1L << CONST) | (1L << DELETE) | (1L << FN) | (1L << FOR) | (1L << GET) | (1L << HEAD) | (1L << LET) | (1L << NEW) | (1L << PATCH) | (1L << POST) | (1L << PUT) | (1L << RET) | (1L << ID) | (1L << INT) | (1L << DOUBLE) | (1L << RAW_STRING) | (1L << STRING) | (1L << REGEX_LITERAL))) != 0)) {
				{
				{
				setState(40);
				topLevel();
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopLevelContext extends ParserRuleContext {
		public FunctionDeclContext functionDecl() {
			return getRuleContext(FunctionDeclContext.class,0);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(RapierScriptParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(RapierScriptParser.SEMI, i);
		}
		public TopLevelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RapierScriptListener ) ((RapierScriptListener)listener).enterTopLevel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RapierScriptListener ) ((RapierScriptListener)listener).exitTopLevel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RapierScriptVisitor ) return ((RapierScriptVisitor<? extends T>)visitor).visitTopLevel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelContext topLevel() throws RecognitionException {
		TopLevelContext _localctx = new TopLevelContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_topLevel);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FN:
				{
				setState(46);
				functionDecl();
				}
				break;
			case CURLY_L:
			case PAREN_L:
			case SQUARE_L:
			case CONST:
			case DELETE:
			case FOR:
			case GET:
			case HEAD:
			case LET:
			case NEW:
			case PATCH:
			case POST:
			case PUT:
			case RET:
			case ID:
			case INT:
			case DOUBLE:
			case RAW_STRING:
			case STRING:
			case REGEX_LITERAL:
				{
				{
				setState(51); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(47);
						stmt();
						setState(49);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==SEMI) {
							{
							setState(48);
							match(SEMI);
							}
						}

						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(53); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode CURLY_L() { return getToken(RapierScriptParser.CURLY_L, 0); }
		public TerminalNode CURLY_R() { return getToken(RapierScriptParser.CURLY_R, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(RapierScriptParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(RapierScriptParser.SEMI, i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RapierScriptListener ) ((RapierScriptListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RapierScriptListener ) ((RapierScriptListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RapierScriptVisitor ) return ((RapierScriptVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				match(CURLY_L);
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CURLY_L) | (1L << PAREN_L) | (1L << SQUARE_L) | (1L << CONST) | (1L << DELETE) | (1L << FOR) | (1L << GET) | (1L << HEAD) | (1L << LET) | (1L << NEW) | (1L << PATCH) | (1L << POST) | (1L << PUT) | (1L << RET) | (1L << ID) | (1L << INT) | (1L << DOUBLE) | (1L << RAW_STRING) | (1L << STRING) | (1L << REGEX_LITERAL))) != 0)) {
					{
					{
					setState(58);
					stmt();
					setState(60);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==SEMI) {
						{
						setState(59);
						match(SEMI);
						}
					}

					}
					}
					setState(66);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(67);
				match(CURLY_R);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				stmt();
				setState(70);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(69);
					match(SEMI);
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclContext extends ParserRuleContext {
		public Token name;
		public TerminalNode FN() { return getToken(RapierScriptParser.FN, 0); }
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public TerminalNode ID() { return getToken(RapierScriptParser.ID, 0); }
		public FunctionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RapierScriptListener ) ((RapierScriptListener)listener).enterFunctionDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RapierScriptListener ) ((RapierScriptListener)listener).exitFunctionDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RapierScriptVisitor ) return ((RapierScriptVisitor<? extends T>)visitor).visitFunctionDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDeclContext functionDecl() throws RecognitionException {
		FunctionDeclContext _localctx = new FunctionDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(FN);
			setState(75);
			((FunctionDeclContext)_localctx).name = match(ID);
			setState(76);
			functionBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionBodyContext extends ParserRuleContext {
		public TerminalNode PAREN_L() { return getToken(RapierScriptParser.PAREN_L, 0); }
		public TerminalNode PAREN_R() { return getToken(RapierScriptParser.PAREN_R, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<ParamSpecContext> paramSpec() {
			return getRuleContexts(ParamSpecContext.class);
		}
		public ParamSpecContext paramSpec(int i) {
			return getRuleContext(ParamSpecContext.class,i);
		}
		public TerminalNode COLON() { return getToken(RapierScriptParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(RapierScriptParser.ARROW, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(RapierScriptParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(RapierScriptParser.COMMA, i);
		}
		public FunctionBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RapierScriptListener ) ((RapierScriptListener)listener).enterFunctionBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RapierScriptListener ) ((RapierScriptListener)listener).exitFunctionBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RapierScriptVisitor ) return ((RapierScriptVisitor<? extends T>)visitor).visitFunctionBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionBodyContext functionBody() throws RecognitionException {
		FunctionBodyContext _localctx = new FunctionBodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionBody);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(PAREN_L);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(84);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(79);
						paramSpec();
						setState(80);
						match(COMMA);
						}
						} 
					}
					setState(86);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				}
				setState(87);
				paramSpec();
				}
			}

			setState(90);
			match(PAREN_R);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(91);
				match(COLON);
				setState(92);
				type();
				}
			}

			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CURLY_L:
			case PAREN_L:
			case SQUARE_L:
			case CONST:
			case DELETE:
			case FOR:
			case GET:
			case HEAD:
			case LET:
			case NEW:
			case PATCH:
			case POST:
			case PUT:
			case RET:
			case ID:
			case INT:
			case DOUBLE:
			case RAW_STRING:
			case STRING:
			case REGEX_LITERAL:
				{
				setState(95);
				block();
				}
				break;
			case ARROW:
				{
				{
				setState(96);
				match(ARROW);
				setState(97);
				expr(0);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgSpecContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(RapierScriptParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(RapierScriptParser.COMMA, i);
		}
		public ArgSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RapierScriptListener ) ((RapierScriptListener)listener).enterArgSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RapierScriptListener ) ((RapierScriptListener)listener).exitArgSpec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RapierScriptVisitor ) return ((RapierScriptVisitor<? extends T>)visitor).visitArgSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgSpecContext argSpec() throws RecognitionException {
		ArgSpecContext _localctx = new ArgSpecContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_argSpec);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CURLY_L) | (1L << PAREN_L) | (1L << SQUARE_L) | (1L << DELETE) | (1L << GET) | (1L << HEAD) | (1L << NEW) | (1L << PATCH) | (1L << POST) | (1L << PUT) | (1L << ID) | (1L << INT) | (1L << DOUBLE) | (1L << RAW_STRING) | (1L << STRING) | (1L << REGEX_LITERAL))) != 0)) {
				{
				setState(105);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(100);
						expr(0);
						setState(101);
						match(COMMA);
						}
						} 
					}
					setState(107);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				setState(108);
				expr(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamSpecContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RapierScriptParser.ID, 0); }
		public TerminalNode COLON() { return getToken(RapierScriptParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ParamSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RapierScriptListener ) ((RapierScriptListener)listener).enterParamSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RapierScriptListener ) ((RapierScriptListener)listener).exitParamSpec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RapierScriptVisitor ) return ((RapierScriptVisitor<? extends T>)visitor).visitParamSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamSpecContext paramSpec() throws RecognitionException {
		ParamSpecContext _localctx = new ParamSpecContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_paramSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(ID);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(112);
				match(COLON);
				setState(113);
				type();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Token name;
		public TerminalNode ID() { return getToken(RapierScriptParser.ID, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RapierScriptListener ) ((RapierScriptListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RapierScriptListener ) ((RapierScriptListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RapierScriptVisitor ) return ((RapierScriptVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			((TypeContext)_localctx).name = match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public VardeclStmtContext vardeclStmt() {
			return getRuleContext(VardeclStmtContext.class,0);
		}
		public AssignStmtContext assignStmt() {
			return getRuleContext(AssignStmtContext.class,0);
		}
		public ExprStmtContext exprStmt() {
			return getRuleContext(ExprStmtContext.class,0);
		}
		public ForStmtContext forStmt() {
			return getRuleContext(ForStmtContext.class,0);
		}
		public ForeachStmtContext foreachStmt() {
			return getRuleContext(ForeachStmtContext.class,0);
		}
		public RetStmtContext retStmt() {
			return getRuleContext(RetStmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RapierScriptListener ) ((RapierScriptListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RapierScriptListener ) ((RapierScriptListener)listener).exitStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RapierScriptVisitor ) return ((RapierScriptVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_stmt);
		try {
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				vardeclStmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				assignStmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(120);
				exprStmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(121);
				forStmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(122);
				foreachStmt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(123);
				retStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
